fixed dark mode

--- a/dark.css
+++ b/dark.css
@@ -171,15 +171,9 @@ th:not([align]) {
 
 
 
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-a:hover {
+#navigation a:hover {
     text-decoration-line: underline;
-    text-decoration-color: black;
+    text-decoration-color: white;
 }
 
 button a:hover {
@@ -443,10 +437,14 @@ blockquote {
 }
 
 .project-heading {
+    
     font-size: 28px;
     margin-bottom: 20px;
 }
 
+.project-heading a:hover{
+    text-decoration: underline;
+}
 .project-description {
     text-align: justify;
 }
@@ -576,12 +574,12 @@ blockquote {
 }
 
 /* The dots/bullets/indicators */
-.dot {
+.dot-container .dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
     margin: 0 2px;
-    background-color: #bbb;
+    background-color: #c96;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
@@ -612,9 +610,12 @@ blockquote {
     background-color: #a8bbbf;
 }
 
-/* html {
-    font-family: 'Roboto', sans-serif;
-    background-color: #151515;
-    overflow-x: hidden;
-     
-} */
+.cta-button {
+    font-size: 18px;
+    width: 200px;
+    height: 43px;
+    text-transform: uppercase;
+    background-color: #c96;
+    padding: 10px 0;
+
+}
